--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ alembic>=1.12.0
 
 # Database
 psycopg2-binary>=2.9.7  # PostgreSQL adapter
-sqlite3  # Included in Python standard library
+# sqlite3 is included in Python standard library
 
 # Data processing
 pandas>=2.0.0
