Fix PostgreSQL data validation issues for crypto collection… Fix PostgreSQL data validation issues for crypto collection
- Add numeric value sanitization to prevent overflow errors
  - Handle extreme values exceeding NUMERIC(30,8) limits (>10^22)
  - Set overflow values to NULL with warnings
  - Log precision issues for very small values (<1e-8)
  - Applied to all numeric fields: prices, supplies, market caps, deltas

- Add string field validation to prevent truncation errors
  - Truncate strings exceeding field length limits
  - Applied to project codes (50 chars), names (255 chars), colors (50 chars)
  - Log truncation warnings for debugging

- Successfully collected 15,716+ crypto projects without database errors
- Enhanced data collection robustness and reliability
- Added database wipe utility for fresh collection starts
- Updated Docker Compose with pgAdmin configuration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,6 +91,26 @@ services:
     restart: unless-stopped
     profiles: ["admin"]
 
+  # PGAdmin - PostgreSQL administration interface
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: crypto_analytics_pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin_secure_password_2024}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
+    ports:
+      - "5050:80"
+    volumes:
+      - pgadmin_data:/var/lib/pgadmin
+      - ./pgadmin_servers.json:/pgadmin4/servers.json:ro
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+    profiles: ["admin"]
+
   # Backup service
   postgres_backup:
     image: postgres:16-alpine
@@ -130,6 +150,8 @@ volumes:
   postgres_replica_data:
     driver: local
   redis_data:
+    driver: local
+  pgadmin_data:
     driver: local
 
 networks:
