Project quality improvements and development tooling
✅ Add missing __init__.py files to all src/ subdirectories
✅ Clean up runtime state files (moved to logs/ directory)
✅ Move .env.postgresql to config/ for consistency
✅ Create pyproject.toml for modern Python packaging
✅ Add development scripts for setup and linting
✅ Create comprehensive docs/README.md index
✅ Update .gitignore for build artifacts and temp files

These non-breaking improvements enhance:
- Code organization and imports
- Development workflow
- Documentation accessibility
- Package management
- File organization consistency

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,21 @@ logs/
 analysis_state.json
 error_report.json
 
+# Build and distribution
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# Development
+.pytest_cache/
+.coverage
+.mypy_cache/
+
+# Temporary state files
+logs/analysis_state.json
+logs/error_report.json
+
 # Database files
 *.db
 *.sqlite*
