--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,44 @@
 # Core dependencies
-requests>=2.31.0
-python-dotenv>=1.0.0
-sqlalchemy>=2.0.0
-alembic>=1.12.0
+requests==2.32.5
+python-dotenv==1.1.1
+sqlalchemy==2.0.44
+alembic==1.17.0
 
 # Database
-psycopg2-binary>=2.9.7  # PostgreSQL adapter
+psycopg2-binary==2.9.11  # PostgreSQL adapter
 # sqlite3 is included in Python standard library
 
 # Data processing
-pandas>=2.0.0
-numpy>=1.24.0
+pandas==2.3.2
+numpy==2.2.6
 
-# ML/AI
-openai>=1.0.0
-anthropic>=0.3.0
-scikit-learn>=1.3.0
-transformers>=4.30.0
+# ML/AI (optional - install with pip install -e .[ml])
+openai==2.3.0
+anthropic==0.69.0
+scikit-learn==1.7.2
+# transformers==4.57.0  # Large dependency, moved to optional
 
 # Web framework
-flask>=2.3.0
-flask-sqlalchemy>=3.0.0
-flask-cors>=4.0.0
+flask==3.1.2
+flask-sqlalchemy==3.1.1
+flask-cors==6.0.1
 
 # Web scraping
-beautifulsoup4>=4.12.0
-selenium>=4.15.0
-scrapy>=2.11.0
+beautifulsoup4==4.14.2
+selenium==4.36.0
+scrapy==2.13.3
 
 # Utilities
-schedule>=1.2.0
-click>=8.1.0
-loguru>=0.7.0
-pydantic>=2.0.0
+schedule==1.2.2
+click==8.2.1
+loguru==0.7.3
+pydantic==2.11.9
 
-# Testing
-pytest>=7.4.0
-pytest-cov>=4.1.0
+# Testing (install with pip install -e .[dev])
+pytest==8.4.2
+pytest-cov==7.0.0
 
-# Development
-black>=23.7.0
-flake8>=6.0.0
-mypy>=1.5.0
+# Development (install with pip install -e .[dev])
+black==25.9.0
+flake8==7.3.0
+mypy==1.18.2
