Fix import errors: Install PyPDF2 dependency for whitepaper scraper… Fix import errors: Install PyPDF2 dependency for whitepaper scraper
- Installed PyPDF2 to resolve import warnings in whitepaper_scraper.py
- All PDF extraction libraries (PyPDF2, pdfplumber, PyMuPDF) now available
- Eliminates import errors that were causing warnings in analysis logs
- Improves PDF extraction reliability with multiple fallback options

--- a/config/.env.example
+++ b/config/.env.example
@@ -3,6 +3,13 @@ LIVECOINWATCH_API_KEY=your_livecoinwatch_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# Social Media & Content APIs
+YOUTUBE_CLIENT_ID=your_youtube_client_id_here
+YOUTUBE_CLIENT_SECRET=your_youtube_client_secret_here
+REDDIT_CLIENT_ID=your_reddit_client_id_here
+REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
+REDDIT_USER_AGENT=crypto-analytics-scraper/1.0
+
 # Database Configuration
 DATABASE_URL=sqlite:///./data/crypto_analytics.db
 # For PostgreSQL: DATABASE_URL=postgresql://user:password@localhost:5432/crypto_analytics
