--- a/config/.env.example
+++ b/config/.env.example
@@ -10,6 +10,13 @@ REDDIT_CLIENT_ID=your_reddit_client_id_here
 REDDIT_CLIENT_SECRET=your_reddit_client_secret_here
 REDDIT_USER_AGENT=crypto-analytics-scraper/1.0
 
+# Twitter API Configuration
+TWITTER_API_KEY=your_twitter_api_key_here
+TWITTER_API_SECRET=your_twitter_api_secret_here
+TWITTER_BEARER_TOKEN=your_twitter_bearer_token_here
+TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
+TWITTER_ACCESS_TOKEN_SECRET=your_twitter_access_token_secret_here
+
 # Database Configuration
 DATABASE_URL=sqlite:///./data/crypto_analytics.db
 # For PostgreSQL: DATABASE_URL=postgresql://user:password@localhost:5432/crypto_analytics
