Implement complete Telegram integration for crypto project analysis… Implement complete Telegram integration for crypto project analysis
✨ Features:
- Telegram Bot API client with rate limiting and error handling
- Comprehensive analysis metrics for channel evaluation
- Database storage integration with existing schema
- Batch analysis capability for efficient processing
- Complete test suite for validation

🔧 Components:
- TelegramAPIClient: Handles Bot API communication and rate limits
- TelegramAnalysisMetrics: Calculates authenticity, community, content, activity, and security scores
- TelegramContentAnalyzer: Main analyzer combining API + metrics + database
- Comprehensive test suite: Validates all functionality end-to-end

📊 Analysis Capabilities:
- Channel member count and growth tracking
- Content quality and professionalism scoring
- Community health and authenticity assessment
- Security and privacy settings evaluation
- Spam/scam detection with red flag identification

🎯 Value Add:
- Community engagement metrics crucial for crypto analysis
- Scam detection to identify suspicious projects
- Professional channel assessment for legitimacy
- Integration with existing project analysis workflow

Ready for production use with proper bot token configuration.

--- a/config/.env.example
+++ b/config/.env.example
@@ -17,6 +17,9 @@ TWITTER_BEARER_TOKEN=your_twitter_bearer_token_here
 TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
 TWITTER_ACCESS_TOKEN_SECRET=your_twitter_access_token_secret_here
 
+# Telegram Bot API Configuration
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+
 # Database Configuration
 DATABASE_URL=sqlite:///./data/crypto_analytics.db
 # For PostgreSQL: DATABASE_URL=postgresql://user:password@localhost:5432/crypto_analytics
