fix: correct Docker configuration paths and add documentation… fix: correct Docker configuration paths and add documentation
Docker Infrastructure Improvements:
- Fix config file paths in docker-compose.yml
  - Update redis.conf path to config/redis.conf
  - Update pgadmin_servers.json path to config/pgadmin_servers.json
  - Remove non-existent postgresql.conf reference
- Create backup_scripts/ directory with README
- Add backups/.gitkeep to preserve directory structure
- Update .gitignore to exclude backup files (*.sql, *.dump)

Documentation:
- Add comprehensive DOCKER_SETUP.md guide
  - Service descriptions and configurations
  - Docker commands and usage examples
  - Backup/restore procedures
  - Troubleshooting guide
  - Security recommendations

All Docker services now reference correct configuration files and
directories, resolving volume mount issues.

--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,11 @@ logs/error_report.json
 *.sqlite*
 postgresql.conf/
 
+# Backups
+backups/
+*.sql
+*.dump
+
 # API keys and secrets
 *.key
 *.pem
