perf: add resource limits and increase PostgreSQL capacity… perf: add resource limits and increase PostgreSQL capacity
PostgreSQL Performance Improvements:
- Increase max_connections: 200 → 300
- Double shared_buffers: 256MB → 512MB
- Double effective_cache_size: 1GB → 2GB
- Double work_mem: 8MB → 16MB
- Double maintenance_work_mem: 128MB → 256MB
- Double wal_buffers: 16MB → 32MB
- Increase parallel workers: 8 → 12
- Increase parallel workers per query: 4 → 6
- Add max_parallel_maintenance_workers: 4
- Reduce logging: log_statement=all → ddl (schema changes only)

Resource Limits Added:
- PostgreSQL: 4 CPU / 4GB RAM (reserved: 2 CPU / 2GB)
- Redis: 1 CPU / 1GB RAM (reserved: 0.5 CPU / 512MB)
- Adminer: 0.5 CPU / 512MB RAM (reserved: 0.25 CPU / 256MB)
- pgAdmin: 1 CPU / 1GB RAM (reserved: 0.25 CPU / 256MB)
- Backup: 2 CPU / 2GB RAM (reserved: 0.5 CPU / 512MB)

Documentation Updates:
- Add resource limits summary table
- Update system requirements (min 4 cores / 6GB RAM)
- Document new PostgreSQL tuning parameters

These changes support high-load scenarios with concurrent scraping,
analysis, and query workloads.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,22 +17,31 @@ services:
       - "5432:5432"
     command: >
       postgres
-      -c max_connections=200
-      -c shared_buffers=256MB
-      -c effective_cache_size=1GB
-      -c work_mem=8MB
-      -c maintenance_work_mem=128MB
+      -c max_connections=300
+      -c shared_buffers=512MB
+      -c effective_cache_size=2GB
+      -c work_mem=16MB
+      -c maintenance_work_mem=256MB
       -c checkpoint_completion_target=0.9
-      -c wal_buffers=16MB
+      -c wal_buffers=32MB
       -c default_statistics_target=100
       -c random_page_cost=1.1
       -c effective_io_concurrency=200
-      -c max_worker_processes=8
-      -c max_parallel_workers_per_gather=4
-      -c max_parallel_workers=8
-      -c log_statement=all
+      -c max_worker_processes=12
+      -c max_parallel_workers_per_gather=6
+      -c max_parallel_workers=12
+      -c max_parallel_maintenance_workers=4
+      -c log_statement=ddl
       -c log_duration=on
       -c log_min_duration_statement=1000
+    deploy:
+      resources:
+        limits:
+          cpus: '4'
+          memory: 4G
+        reservations:
+          cpus: '2'
+          memory: 2G
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U crypto_user -d crypto_analytics"]
@@ -50,6 +59,14 @@ services:
     ports:
       - "6379:6379"
     command: redis-server /usr/local/etc/redis/redis.conf
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
@@ -87,6 +104,14 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 256M
     restart: unless-stopped
     profiles: ["admin"]
 
@@ -107,6 +132,14 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 1G
+        reservations:
+          cpus: '0.25'
+          memory: 256M
     restart: unless-stopped
     profiles: ["admin"]
 
@@ -140,6 +173,14 @@ services:
           sleep 86400
         done
       "
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 2G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
     restart: unless-stopped
     profiles: ["backup"]
 
