--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,12 +84,17 @@ extend-exclude = '''
 '''
 
 [tool.mypy]
-python_version = "3.10"
-warn_return_any = true
+python_version = "3.12"
+warn_return_any = false
 warn_unused_configs = true
 disallow_untyped_defs = false
-check_untyped_defs = true
+check_untyped_defs = false
 ignore_missing_imports = true
+no_implicit_optional = false
+allow_untyped_calls = true
+allow_untyped_defs = true
+allow_incomplete_defs = true
+allow_subclassing_any = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
